# amr2.0

./: .antigravityrules  .env.example  .gitignore  AGENTS.md  AMR2.0.code-workspace  CLAUDE.md  GEMINI.md  LIDAR_MAPPING_GUIDE.md  PC_FIRST_ARCHITECTURE.md  PROJECT_CONTEXT.md  PROJECT_MEMORY.md  PROJECT_REPORT.md  README.md  Trajectory_Tracking_Tutorial.md  code2.code-workspace  extract_pdf.py  fix_css.py  implementation_plan.md  index.html  package-lock.json  package.json  task.md  vite.config.js  walkthrough.md
.codex/: README.md  instructions.md  memory.md  settings.json
.obsidian/: graph.json  workspace.json
.skill_extracted/: SKILL.md
ai_journals/: 2026-05-19.md  2026-05-20.md
docs/: Home.md
esp32/: auto_fallback.py  compile_commands.json  get_port.py  platformio.ini
esp32s3xe/: AMR2.0.code-workspace  ARCHITECTURE.md  code2.code-workspace  platformio.ini  read_serial.py
esp32s3xe-rust/: Cargo.toml  partitions.csv  sdkconfig.defaults
esp32s3xe-rust/.cargo/: config.toml
esp32s3xe-rust/src/: config.rs  main.rs
esp32s3xe-rust/src/comms/: mod.rs  websocket.rs  wifi.rs
esp32s3xe-rust/src/core/: control.rs  mapper.rs  mod.rs  pathfinder.rs  pid.rs
esp32s3xe-rust/src/drivers/: battery.rs  encoder.rs  imu.rs  ina3221.rs  lidar.rs  mod.rs  motor.rs  oled.rs
esp32s3xe_v2/: .gitignore  AMR2.0.code-workspace  ARCHITECTURE.md  auto_fallback.py  compile_commands.json  platformio.ini
scripts/: benchmark_trajectory_tracking.js  convert_pdfs_to_md.py  debug_pathfinding.js  generate_report_plots.js  kill_background_tasks.ps1  run_fcc_option2.ps1
(+156 files in other folders)
