[package]
name = "esp32s3xe-rust"
version = "0.1.0"
authors = ["le minh dat <leminhdat@email.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp32s3xe-rust"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.46"
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
heapless = "0.8"                   # Static allocation (no malloc in real-time loops)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"                    # MessagePack serialization
anyhow = "1"                       # Ergonomic error handling

[build-dependencies]
embuild = "0.33"
